# halp

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: config.rs  main.rs  output.rs  prompt.rs
src/providers/: anthropic.rs  gemini.rs  mod.rs  openai.rs  streaming.rs
