[package]
name = "halp"
version = "0.1.0"
edition = "2021"
description = "Fast terminal LLM helper for generating shell commands"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
async-trait = "0.1"

[profile.release]
opt-level = 3
lto = true
